# sonate

./: .gitattributes  .gitignore  Cargo.toml
.github/workflows/: rust.yml
crates/lolite/: Cargo.toml  Compatibility.md
crates/lolite/src/: css_parser.rs  css_parser_tests.rs  flex_layout.rs  layout.rs  lib.rs  painter.rs  style.rs  windowing.rs  worker_instance.rs
crates/lolite/src/backend/: d3d12.rs  gl.rs  metal.rs  mod.rs  vulkan.rs
crates/lolite/src/css_parser/: border_tests.rs  borders.rs  color_tests.rs  colors.rs  css_parser_tests.rs  mod.rs  parser.rs  value_tests.rs
crates/lolite/src/layout/: margin_padding_tests.rs
crates/lolite_common/: Cargo.toml
crates/lolite_css/: Cargo.toml
crates/lolite_css/src/: css_parser.rs  css_parser_tests.rs  engine.rs  flex_alignment.test.rs  flex_layout.rs  flex_layout_flow.test.rs  flex_layout_gap.test.rs  hit_testing.test.rs  lib.rs  main.rs  margin_padding.test.rs  painter.rs  plumbing.rs  windowing.rs
crates/lolite_css/src/backend/: d3d12.rs  metal.rs  mod.rs
crates/lolite_css/src/engine/: flex_layout_alignment_tests.rs  flex_layout_flow_tests.rs  flex_layout_gap_tests.rs  flex_layout_grow_shrink_basis_tests.rs  hit_testing_tests.rs  margin_padding_tests.rs
crates/lolite_lib/: Cargo.toml
crates/lolite_lib/include/: lolite.h
crates/lolite_lib/src/: direct_backend.rs  engine_backend.rs  lib.rs  worker_backend.rs
crates/lolite_macros/: Cargo.toml
crates/lolite_macros/src/: lib.rs
crates/lolite_tester/: Cargo.toml
crates/lolite_tester/src/: main.rs
crates/lolite_transfer/: Cargo.toml
crates/lolite_transfer/src/: lib.rs
crates/lolite_worker/: Cargo.toml
crates/lolite_worker/src/: main.rs
crates/sonate/: Cargo.toml
crates/sonate/src/: commands.rs  flex_layout.rs  layout.rs  lib.rs  painter.rs  style.rs  style_matching.rs  text.rs  windowing.rs
crates/sonate/src/backend/: d3d12.rs  gl.rs  metal.rs  mod.rs
crates/sonate/src/css_parser/: border_tests.rs  named_colors.rs  parser.rs  value_tests.rs  values.rs
crates/sonate/src/layout/: asserts.rs  flex_layout_alignment_tests.rs  flex_layout_flow_tests.rs  flex_layout_gap_tests.rs  flex_layout_grow_shrink_basis_tests.rs  flex_layout_margin_tests.html  flex_layout_margin_tests.rs  flex_layout_nested_tests.html  flex_layout_nested_tests.rs  hit_testing_tests.rs  margin_padding_tests.rs  margin_tests.html  margin_tests.rs  tag_selector_tests.rs  test_html.rs
crates/sonate_common/: Cargo.toml
crates/sonate_common/src/: lib.rs
crates/sonate_lib/: Cargo.toml
crates/sonate_lib/include/: sonate.h
crates/sonate_lib/src/: direct_backend.rs  engine_backend.rs  lib.rs  worker_backend.rs
crates/sonate_macros/: Cargo.toml
crates/sonate_worker/: Cargo.toml
crates/sonate_worker/src/: main.rs
crates/stablegui/: Cargo.toml
crates/stablegui/src/: lib.rs  worker_instance.rs
crates/stablegui_common/: Cargo.toml
crates/stablegui_common/src/: lib.rs
crates/stablegui_tester/: Cargo.toml
crates/stablegui_tester/src/: main.rs
crates/stablegui_transfer/: Cargo.toml
crates/stablegui_transfer/src/: lib.rs
crates/stablegui_worker/: Cargo.toml
crates/stablegui_worker/src/: main.rs
examples/c_usage/: CMakeLists.txt  README.md  c_usage.c
examples/rust_usage/: rust_usage.rs
examples/showcase_flex/: showcase_flex.rs
