[workspace]
members = [
    "crates/lolite",
    "crates/lolite_common",
    "crates/lolite_css",
    "crates/lolite_macros",
    "crates/lolite_tester",
    "crates/lolite_transfer",
    "crates/lolite_worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
shared_memory = "0.12.4"
once_cell = "1.19.0"
ipc-channel = "0.18.2"
