[workspace]
members = [
    "crates/sonate",
    "crates/sonate_common",
    "crates/sonate_lib",
    "crates/sonate_macros",
    "crates/sonate_worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
shared_memory = "0.12.4"
once_cell = "1.19.0"
ipc-channel = "0.18.2"
