[package]
name = "lolite"
version.workspace = true
edition.workspace = true

[dependencies]
winit = "0.30.8"
anyhow = "1.0.95"
skia-safe = "0.87.0"
lolite_macros = { path = "../lolite_macros" }
cssparser = "0.35.0"
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
skia-safe = { version = "0.87.0", features = ["d3d"] }
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(target_os = "macos")'.dependencies]
skia-safe = { version = "0.87.0", features = ["metal"] }
metal = "0.27"
objc = "0.2"
raw-window-handle = "0.6"
core-graphics-types = "0.1"

[[example]]
name = "showcase_flex"
path = "../../examples/showcase_flex/showcase_flex.rs"
