[package]
name = "lolite_css"
version.workspace = true
edition.workspace = true

[dependencies]
winit = "0.30.8"
anyhow = "1.0.95"
skia-safe = { version = "0.81.0", features = ["d3d"] }
windows = { version = "0.58.0", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
] }
lolite_macros = { path = "../lolite_macros" }
