[package]
name = "lolite_css"
version.workspace = true
edition.workspace = true

[dependencies]
winit = "0.30.8"
anyhow = "1.0.95"
skia-safe = { version = "0.87.0", features = ["d3d"] }
windows = { version = "0.61.3", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Security",
] }
lolite_macros = { path = "../lolite_macros" }
cssparser = "0.35.0"
