[package]
name = "stablegui"
version.workspace = true
edition.workspace = true

[dependencies]
stablegui_common = { path = "../stablegui_common" }
stablegui_transfer = { path = "../stablegui_transfer" }
shared_memory = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
